--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "start": "node index.js"
     },
     "dependencies": {
+        "optimist": "0.6.0",
+        "async": "0.2.9"
     },
     "devDependencies": {
     }
